[gd_scene load_steps=8 format=3 uid="uid://crcrsavxxd1b2"]

[ext_resource type="Script" uid="uid://ctbwo0k0xc4l2" path="res://scripts/MainMenu.gd" id="1_2wh52"]
[ext_resource type="Theme" uid="uid://b8hvkks1jfjh1" path="res://assets/main_theme.tres" id="1_yqorp"]
[ext_resource type="FontFile" uid="uid://dvekxnjagew2e" path="res://assets/font/Merriweather.ttf" id="2_0ykhv"]
[ext_resource type="PackedScene" uid="uid://shgucd7l2skg" path="res://scenes/background.tscn" id="2_l72w3"]
[ext_resource type="Texture2D" uid="uid://cxivecohh4cqy" path="res://assets/cards/spades_10.png" id="5_l72w3"]

[sub_resource type="LabelSettings" id="LabelSettings_l72w3"]
font = ExtResource("2_0ykhv")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_826wr"]
font = ExtResource("2_0ykhv")
font_size = 64

[node name="MainMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wh52")

[node name="background" parent="." instance=ExtResource("2_l72w3")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_yqorp")
theme_override_constants/separation = 30

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Mindi" type="Label" parent="VBoxContainer/Title"]
layout_mode = 2
text = "Mindi"
label_settings = SubResource("LabelSettings_l72w3")

[node name="Card" type="Sprite2D" parent="VBoxContainer/Title"]
position = Vector2(233, 37)
scale = Vector2(0.25, 0.248)
texture = ExtResource("5_l72w3")

[node name="Coat" type="Label" parent="VBoxContainer/Title"]
layout_mode = 2
text = "Coat"
label_settings = SubResource("LabelSettings_826wr")

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="RulesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Rules"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_type_variation = &"QuitButton"
text = "Quit Game"
